fix: visibillity of buttons in header

--- a/app/components/header/header.module.scss
+++ b/app/components/header/header.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/colors";
+
 $base-color-white: #bbb;
 $base-color-dark: #232323;
 
@@ -29,14 +31,6 @@ $base-color-dark: #232323;
 
 .isSticky .auth {
   width: 15%;
-
-  button {
-    border-radius: 10px;
-    padding: 4px;
-    border: 1px $base-color-dark solid;
-    background: #600707;
-    color: $base-color-white;
-  }
 }
 
 .img_logo {
@@ -100,13 +94,14 @@ $base-color-dark: #232323;
   transition: 0.5s all;
 
   button {
-    border-radius: 10px;
-    padding: 7px;
+    border-radius: 4px;
+    padding: 0.75rem;
     border: 1px $base-color-dark solid;
-    background: #600707;
+    background-color: $color-tab-default;
+    cursor: pointer;
   }
   button:hover {
-    background: #eeeeee;
+    background-color: $color-tab-hover;
     color: $base-color-dark;
   }
 }
